--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,21 @@
-name: CI
+name: github pages
 
-on: [push]
+on:
+  push:
+    branches:
+    - master
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      build-and-deploy:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout
+          uses: actions/checkout@master
+    
+        - name: Build and Deploy
+          uses: testthedocs/github-pages-deploy-action@master
+          env:
+            ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            BRANCH: gh-pages
+            FOLDER: docs/.vuepress/dist
+            BUILD_SCRIPT: yarn install && yarn build
