--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,13 @@ jobs:
         steps:
         - name: Checkout
           uses: actions/checkout@master
+        - run: yarn install vuepress
+        - run: yarn run build
     
-        - name: Build and Deploy
-          uses: testthedocs/github-pages-deploy-action@master
+        - name: Deploy
+          uses: peaceiris/actions-gh-pages@v2.5.0
+
           env:
             ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             BRANCH: gh-pages
             FOLDER: docs/.vuepress/dist
-            BUILD_SCRIPT: yarn install && yarn build
