--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
         - name: Checkout
           uses: actions/checkout@master
         - run: npm install vuepress
-        - run: npm run build
+        - run: npm run docs:build
     
-        - name: Vuepress to GitHub Pages
-          uses: testthedocs/github-pages-deploy-action@0.0.2
+        - name: Vuepress deploy
+          uses: jenkey2011/vuepress-deploy@1.0.1
 
           env:
             ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
