--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
         - run: npm install vuepress
         - run: npm run docs:build
     
-        - name: Vuepress deploy
-          uses: jenkey2011/vuepress-deploy@1.0.1
-
+        - name: Build and Deploy
+          uses: JamesIves/github-pages-deploy-action@master
+          
           env:
             ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             BRANCH: gh-pages
